unpackaged/main/default/objects/PF_Email_Recipient__mdt/PF_Email_Recipient__mdt.object-meta.xml
<CustomObject>
    <description>This contains email addresses for recipients of emails sent through apex.
They are identified by the apex class name and a more specific identifier</description>
    <label>PF_Email Recipient</label>
    <pluralLabel>PF_Email Recipients</pluralLabel>
</CustomObject>