unpackaged/main/default/objects/PF_Email_Recipient__mdt/fields/PF_Class__c.field-meta.xml
<CustomField>
    <fullName>PF_Class__c</fullName>
    <description>The apex class where the email is sent</description>
    <label>Class</label>
    <length>100</length>
    <type>Text</type>
</CustomField>