unpackaged/main/default/objects/PF_Email_Recipient__mdt/fields/PF_Email__c.field-meta.xml
<CustomField>
    <fullName>PF_Email__c</fullName>
    <description>Recipient&#39;s email address</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>