unpackaged/main/default/objects/PF_Email_Recipient__mdt/fields/PF_Type__c.field-meta.xml
<CustomField>
    <fullName>PF_Type__c</fullName>
    <description>Identifier used when a class has more than one use case</description>
    <label>Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>